fix(api): replace hardcoded API keys with placeholder

--- a/response_generate/cot_generate.ipynb
+++ b/response_generate/cot_generate.ipynb
@@ -378,7 +378,7 @@
     "for i in range(len(ds[\"test\"])):\n",
     "    client = OpenAI(\n",
     "        base_url=\"https://api.ppinfra.com/v3/openai\",\n",
-    "        api_key=\"sk_izF-jeDcFpiILxa_1GoGr1Rm2ewz9KiJSQK2xQKgatY\",\n",
+    "        api_key=\"sk-xxx\",  # <YOUR_API_KEY>\n",
     "    )\n",
     "    try:\n",
     "        data = ds[\"train\"][i]\n",
