--- a/qs_data_generate/cot_generate.ipynb
+++ b/qs_data_generate/cot_generate.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = load_dataset(\"/Volumes/lpnp6/MoleculeQA/JSON/All\")"
+    "ds = load_dataset(\"/Volumes/lpnp6/MoleculeQA/JSON/All\")  # 原始MoleculeQA数据集加载"
    ]
   },
   {
